--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Spotify Project</title>
-	<link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
+
+<!-- Not for Browser, launch js/main.js with node.js -->
 
 <div class="topWrap">
 	<h1>Gif Image Search</h1>
